@@ -42,7 +42,7 @@
 %% angular frequency convention for L^2 functions and distributions.
 %%
 %% *WARNING*: As of SymPy 0.7.6 (June 2015), there are many problems
-%% with (inverse) Fourier transforms of non-smooth functions, even very 
+%% with (inverse) Fourier transforms of non-smooth functions, even very
 %% simple ones.  Use at your own risk, or even better: help us fix SymPy.
 %%
 %% @seealso{ifourier}
@@ -74,7 +74,7 @@ function F = fourier(varargin)
             'else:'
             '    terms=(fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(-sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*x) is constant'
             '    rlist=list(r.values())'
@@ -107,7 +107,7 @@ function F = fourier(varargin)
             'else:'
             '    terms=(fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(-sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*x) is constant'
             '    rlist=list(r.values())'
@@ -137,7 +137,7 @@ function F = fourier(varargin)
             'else:'
             '    terms=(fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(-sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*x) is constant'
             '    rlist=list(r.values())'
