@@ -46,7 +46,7 @@
 %% angular frequency convention for L^2 functions and distributions.
 %%
 %% *WARNING*: As of SymPy 0.7.6 (June 2015), there are many problems
-%% with (inverse) Fourier transforms of non-smooth functions, even very 
+%% with (inverse) Fourier transforms of non-smooth functions, even very
 %% simple ones. Use at your own risk, or even better: help us fix SymPy.
 %%
 %% @seealso{fourier}
@@ -78,7 +78,7 @@ function f = ifourier(varargin)
             'else:'
             '    terms=(Fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*k) is constant'
             '    rlist=list(r.values())'
@@ -111,7 +111,7 @@ function f = ifourier(varargin)
             'else:'
             '    terms=(Fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*k) is constant'
             '    rlist=list(r.values())'
@@ -141,7 +141,7 @@ function f = ifourier(varargin)
             'else:'
             '    terms=(Fr,)'
             'for term in terms:'
-            '    #compute the Fourier transform '    
+            '    #compute the Fourier transform '
             '    r=sp.simplify(term*sp.exp(sp.I*x*k)).match(a_*sp.exp(b_))'
             '    # if a is constant and b/(I*k) is constant'
             '    rlist=list(r.values())'
