@@ -15,6 +15,11 @@ octsympy 2.3.0-dev
 
   * Calling "inv" on a singular matrix now explicitly gives an error.
 
+  * Fourier and Laplace transforms (and their inverses) use a
+    different implementation which improves handling of delta
+    functions.  Ideally, a later version will consolidate this with
+    SymPy's original implementations.
+
   * Documentation improvements.
 
 
